welcome.lessons.welcome.bat.bool2.AlarmClock.scala.error
alarmClock:9: error: ')' expected but 'else' found.
    else {
    ^alarmClock:19: error: ')' expected but 'else' found.
    else{
    ^